<resources>
    <string name="app_name">Mahavir Jewelrry</string>
    +
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_account">Delete Account</string>
    <string name="user_name">User Name</string>
    <string name="user_profile_picture">User profile picture</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="address_icon">Address icon</string>
    <string name="phonenumber">0000000000</string>
    <string name="addres">Address</string>
    <string name="abc_gmail">abc@gmail</string>
    <string name="track_order">Track Order</string>
    <string name="view_cart">View Cart</string>
    <string name="address_ic">Address icon</string>
    <string name="address">Address</string>
    <string name="email">email</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="username">Username</string>
    <string name="save_changes">Save Changes</string>
    <string name="phone_number">Phone Number</string>
    <string name="edit_profile1">Edit Profile</string>
    <string name="address1">Address</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="change_photo">Change photo</string>
    <string name="email1">Email</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="back_icon_desc">back_button</string>
    <string name="fav_icon_desc">fav_button</string>
    <string name="mahavir">Mahavir</string>
    <string name="_18k_real_gold_and_diamond_ring">18k Real Gold and Diamond Ring</string>
    <string name="_40_580">₹40,580</string>
    <string name="inclusive_of_all_taxes">Inclusive of all taxes</string>
    <string name="store_location">Store Location</string>
    <string name="size_mm_and_gross_weight_gms">Size (mm) and Gross weight (gms)</string>
    <string name="size_in_mm_and_gr_oss_weight_in_gms">Size in mm and Gross weight in gms</string>
    <string name="size_mm">Size (mm)</string>
    <string name="gross_weight_gms">Gross Weight (gms)</string>
    <string name="ring_size_calculator">Ring Size Calculator</string>
    <string name="only_1_stock_left">Only 1 left in stock </string>
    <string name="office_wear">Office Wear</string>
    <string name="product_description">Product Description</string>
    <string name="log_out">Log out</string>
    <string name="profile">profile</string>
    <string name="account">account</string>
    <string name="todo">TODO</string>
    <string name="account1">Account</string>
    <string name="todo1">TODO</string>
    <string name="order_history">Order History</string>
    <string name="log_out1">Log Out</string>
    <string name="arrow">Arrow</string>
    <string name="track_order1">Track Order</string>
    <string name="arrow1">Arrow</string>
    <string name="arrow2">Arrow</string>
    <string name="arrow3">Arrow</string>
    <string name="w1">Arrow</string>


    <string-array name="gen">
        <item>Men</item>
        <item>Women</item>
        <item>Kids</item>
    </string-array>

    <string-array name="product_categories">
        <item>Auspicious</item>
        <item>Daily-Wear</item>
        <item>Everyday</item>
        <item>Special</item>
    </string-array>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string-array name="order_status_options">
        <item>Confirmed</item>
        <item>Processed</item>
        <item>Shipped</item>
        <item>Out for Delivery</item>
        <item>Delivered</item>
        <item>Cancelled</item>
    </string-array>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="name">Name</string>
    <string name="profile_image">Profile Image</string>
</resources>