<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".navigation.ProfileFragment">

    <LinearLayout
        android:id="@+id/user_profile_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:elevation="2dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        tools:ignore="MissingConstraints">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profile_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:contentDescription="@string/user_profile_picture"
            android:padding="4dp"
            android:src="@drawable/profile_placeholder" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/user_name"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/edit_profile"
            android:textColor="#616161"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_info_section"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_profile_section">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="1dp"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageView
                android:id="@+id/p_phone"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/address_icon"
                android:src="@drawable/pphone_icon" />

            <TextView
                android:id="@+id/phone_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_weight="2"
                android:text="@string/phonenumber"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:elevation="1dp"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageView
                android:id="@+id/pemail_ic"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/email"
                android:src="@drawable/pemail" />

            <TextView
                android:id="@+id/pemail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:text="@string/abc_gmail"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:elevation="1dp"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageView
                android:id="@+id/address_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/address_ic"
                android:src="@drawable/ic_address" />

            <TextView
                android:id="@+id/paddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:singleLine="false"
                android:text="@string/address"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_info_section">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_view_cart"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:strokeWidth="@integer/material_motion_duration_long_1"
            android:strokeColor="@android:color/black"
            android:text="@string/view_cart"
            android:textColor="@android:color/black"
            app:cornerRadius="50dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_track_order"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:strokeWidth="@integer/material_motion_duration_long_1"
            android:strokeColor="@android:color/black"
            android:text="@string/track_order"
            android:textColor="@android:color/black"
            app:cornerRadius="50dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_delete_account"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:strokeWidth="@integer/material_motion_duration_long_1"
            android:strokeColor="@android:color/holo_red_dark"
            android:text="@string/delete_account"
            android:textColor="@android:color/holo_red_dark"
            app:cornerRadius="50dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
